Correct Flama font for italics

--- a/style/beamerthemehri.sty
+++ b/style/beamerthemehri.sty
@@ -139,8 +139,8 @@
 
 
 \usepackage{fontspec}
-\setmainfont{Flama}[Extension=.otf,UprightFont=*Light,BoldFont=*Medium,ItalicFont=*Italic]
-\setsansfont{Flama}[Extension=.otf,UprightFont=*Light,BoldFont=*Medium,ItalicFont=*Italic]
+\setmainfont{Flama}[Extension=.otf,UprightFont=*Light,BoldFont=*Medium,ItalicFont=*LightItalic]
+\setsansfont{Flama}[Extension=.otf,UprightFont=*Light,BoldFont=*Medium,ItalicFont=*LightItalic]
 %\setsansfont{FlamaLight}[Extension=.otf]
 
 %\setsansfont{FlamaLight.otf}%
