--- a/style/beamerthemehri.sty
+++ b/style/beamerthemehri.sty
@@ -81,6 +81,16 @@
 \definecolor{hriWarmGreyDark}{rgb}{0.274509804,0.254901961,0.235294118}
 \definecolor{hriWarmGreyLight}{rgb}{0.666666667,0.647058824,0.62745098}
 
+% palette generated from coolors.co
+
+\definecolor{col1}{HTML}{574D68} % indenpendence
+\definecolor{col2}{HTML}{A38560} % cafe au lait
+%\definecolor{col3}{HTML}{C6A15B} % satin sheen gold
+\definecolor{col3}{HTML}{DFCBA4} % wheat
+\definecolor{col4}{HTML}{F2E86D} % corn
+\definecolor{col5}{HTML}{D3DFB8} % tea green
+
+
 % Secondary Colors
 \definecolor{hriSec1}{rgb}{0,0.588235294,0.509803922}
 \definecolor{hriSec1Dark}{rgb}{0,0.392156863,0.31372549}
@@ -219,6 +229,9 @@
     \expandafter\insertsectionHEADaux\insertsectionhead}
     \newcommand{\insertsectionHEADaux}[3]{\MakeUppercase{#3}
 }
+\newcommand{\insertSECTION}{%
+    \MakeUppercase{\insertsection}
+}
 
 \if@doSectionPage\@empty
 \else
@@ -229,8 +242,7 @@
 \setbeamertemplate{background}{}
 \setbeamercolor{background canvas}{bg=hriWarmGreyDark}
 \begin{frame}[plain]
-\centering
-\vfill\usebeamerfont{section title}\textcolor{white}{\insertsectionHEAD}\vfill
+\vfill\usebeamerfont{section title}\textcolor{white}{\rule{\paperwidth}{1pt}\\\insertsectionHEAD}\vfill
 \end{frame}
 \endgroup
 }
@@ -364,6 +376,13 @@
 % Images
 %---------------------------------------------------------------------
 
+\tikzset{
+  double arrow/.style args={#1 colored by #2 and #3}{
+    -stealth,line width=#1,#2, % first arrow
+    postaction={draw,-stealth,#3,line width=(#1)/3,
+                shorten <=(#1)/3,shorten >=2*(#1)/3}, % second arrow
+  }
+}
 
 \newbox\mytempbox
 \newdimen\mytempdimen
@@ -376,15 +395,30 @@
 
 \pgfkeys{
     /background/.is family, /background,
-    default/.style = {scale = 1.0,color=white,caption=\empty},
+    default/.style = {scale = 1.0,color=white,caption=\empty,page=1},
     scale/.estore in = \bgScale,
     color/.estore in = \bgColor,
     caption/.estore in = \bgCaption,
+    page/.estore in = \bgPage,
 }
 
-\newcommand\badge[1]{%
+\newcommand\badge[2][]{%
+    \pgfkeys{/background, default, #1}%
     \begin{tikzpicture}[remember picture,overlay]%
-        \node [xshift=-1cm,yshift=-1.4cm] at (current page.north east){\includegraphics[width=2cm,height=2cm,keepaspectratio]{#1}};%
+        \node [xshift=-.3cm,yshift=-1.8cm,anchor=east] at (current page.north east) (badge) {\includegraphics[height=2cm,keepaspectratio]{#2}};%
+
+        \begin{pgfonlayer}{background}
+
+        \node [anchor=west,fill=hriWarmGreyDark,minimum size=2.2cm] at (badge) {};%
+        \node [anchor=center,fill=hriWarmGreyDark,minimum size=2.2cm,circle] at (badge) {};%
+
+        \end{pgfonlayer}
+
+        \ifdefequal{\bgCaption}{\empty}{%
+        }{%
+                %\node [anchor=north, below=-0.1cm of badge] {\bf\tiny\bgCaption\par};%
+            \node [anchor=west, right=-0.17cm of badge] {\rotatebox{-90}{\bf\tiny\color{hriWarmGreyLight}{\bgCaption}\par}};%
+        }%
     \end{tikzpicture}%
 }
 
