presentation: Fix typo in *Centre*

--- a/presentation.tex
+++ b/presentation.tex
@@ -29,7 +29,7 @@
 \subtitle{Demo Presentation}
 \date{\today}
 \author{Séverin Lemaignan}
-\institute{Cenrte for Neural Systems and Robotics\\{\bf Plymouth University}}
+\institute{Centre for Neural Systems and Robotics\\{\bf Plymouth University}}
 
 %--------------------------------------------------------------------------
 % Notes settings
